attempt to fix PIRATE-4020, Namesco / BK Live - Template "YelAudio": navigation menu looks distorted on Ipad ladscape layout

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -70,11 +70,13 @@ blockquote:after {
   border-bottom: 1px solid lighten(@color-swatch5,30%);
 }
 
-.extendednavigation ul li:hover > ul {
+.extendednavigation ul li:hover > ul,
+.extendednavigation ul li.folder-open > ul {
   border: 1px solid lighten(@color-swatch2,15%);
 }
 
-.widget.extendednavigation ul li:hover > ul li:first-child {
+.widget.extendednavigation ul li:hover > ul li:first-child,
+.widget.extendednavigation ul li.folder-open > ul li:first-child {
   border-top: none;
 }
 
@@ -244,7 +246,8 @@ footer.pageFooter {
   color: @font-swatch6-color-hover;
 }
 
-.widget.extendednavigation ul li:hover {
+.widget.extendednavigation ul li:hover,
+.widget.extendednavigation ul li.folder-open {
   background-color: transparent;
   border-radius: 0 0 5px 5px;
 
@@ -293,7 +296,8 @@ footer.pageFooter {
   padding: 0;
 }
 
-.widget.extendednavigation ul li:hover > ul li {
+.widget.extendednavigation ul li:hover > ul li,
+.widget.extendednavigation ul li.folder-open > ul li {
   display: block;
   width: 100%;
   border-top: 1px solid lighten(@color-swatch2,15%);
@@ -1557,7 +1561,7 @@ footer .widget.socialicons {
   }
 
   .widget.extendednavigation ul li:hover .text,
-  .extendednavigation ul li.folder-open .text {
+  .widget.extendednavigation ul li.folder-open .text {
     color: @font-swatch6-color-hover;
   }
 
